# cae-performance-data-monitoring-tool

./: .clang-format  .clang-tidy  .gitignore  LICENSE.md  README.md  schema.py  shell.nix
core/: CMakeLists.txt
core/dataprocessing/: AtomicExpression.cpp  AtomicExpression.hpp  CMakeLists.txt  ComposedExpression.cpp  ComposedExpression.hpp  DataParser.cpp  DataParser.hpp  DataTypes.hpp  Expression.h  Expression.hpp  Graph.cpp  Graph.h  Graph.hpp  GraphCreator.cpp  GraphCreator.h  GraphCreator.hpp  GraphManager.cpp  GraphManager.h  GraphManager.hpp  GraphOperation.h  GraphOperation.hpp  placeholder
core/dataprocessing/Expressions/: AtomicExpression.cpp  AtomicExpression.hpp  ComposedExpression.cpp  ComposedExpression.hpp  Expression.hpp
core/dataprocessing/ImageGeneration/: ImageGenerator.cpp  ImageGenerator.hpp  PPlot.cpp  PPlot.h  SVGPainter.cpp  SVGPainter.h
core/dataprocessing/Operations/: GraphAddition.cpp  GraphAddition.hpp  GraphDivision.cpp  GraphDivision.hpp  GraphMultiplikation.cpp  GraphMultiplikation.hpp  GraphOperation.hpp  GraphSubtraktion.cpp  GraphSubtraktion.hpp
core/datastore/: CMakeLists.txt  DataManager.cpp  DataManager.h  DataManager.hpp  Module.cpp  Module.hpp  ThreadData.cpp  ThreadData.h  ThreadData.hpp  ThreadInfo.cpp  ThreadInfo.h  ThreadInfo.hpp  WebSocketConnector.cpp  WebSocketConnector.h  WebSocketConnector.hpp  placeholder
core/main/: CMakeLists.txt  Controller.cpp  Controller.hpp  boostBeastTest.cpp  placeholder  test.cpp
core/main/webpage/: index.html  package.json
core/main/webpage/css/: main.css
core/main/webpage/js/: main.js  plugins.js
core/websocket/: CMakeLists.txt  ConnectionMetadata.cpp  ConnectionMetadata.hpp  WebsocketEndpoint.cpp  WebsocketEndpoint.hpp  connection_metadata.cpp  connection_metadata.hpp  test.cpp  websocket_endpoint.cpp  websocket_endpoint.hpp
core/websocket/WebsocketServer/: Server.cpp
resources/: client.py  requirements.txt  schema.py  server.py
