set(CMAKE_CXX_STANDARD 20)
#add_library(dataprocessing
#        Expressions/AtomicExpression.cpp
#        Expressions/ComposedExpression.cpp
#        Operations/GraphAddition.cpp
#        Operations/GraphSubtraktion.cpp
#        Operations/GraphDivision.cpp
#        Operations/GraphMultiplikation.cpp
#        Graph.cpp
#        GraphCreator.cpp
#        GraphManager.cpp
#        ImageGeneration/PPlot.cpp
#        ImageGeneration/SVGPainter.cpp
#        ImageGeneration/ImageGenerator.cpp)

#add_executable(imageGeneratorTes ImageGeneration/ImageGenerator.cpp)

#target_link_libraries(imageGeneratorTes dataprocessing)
