# add_executable(main <source files here>)

#set(Boost_USE_STATIC_LIBS OFF)
#set(Boost_USE_MULTITHREADED ON)
#set(Boost_USE_STATIC_RUNTIME OFF)
SET(CMAKE_INCLUDE_PATH ${CMAKE_INCLUDE_PATH} "C:/Users/CAE-DUALSTUDIS/CLionProjects/boostLibrary/boost_1_81_0")
SET(CMAKE_LIBRARY_PATH ${CMAKE_LIBRARY_PATH} "C:/Users/CAE-DUALSTUDIS/CLionProjects/boostLibrary/boost_1_81_0/libs")
find_package(Boost 1.81.0)

#if(Boost_FOUND)
include_directories(${Boost_INCLUDE_DIRS})
include_directories(../../../websocketpp)
add_executable(test.cpp test.cpp)
target_link_libraries(test.cpp ws2_32)
target_link_libraries(test.cpp ${Boost_LIBRARIES})
#endif()